# panda3d-simplepbr

./: 404.html  LICENSE.txt  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docs.yml  main.yml  tests.yml
config/: index.html
docs/: config.md  features.md  getting-started.md  index.md
examples/minimal/: simplebpr.py
features/: index.html
getting-started/: index.html
scripts/: genbrdflut.py
search/: search_index.json
simplepbr/: __init__.py  _ibl_funcs.py  _ibl_funcs_cpu.py  _shaderutils.py  _spherical_harmonics.py  envmap.py  envpool.py  hdr2env.py  logging.py  simplepbr.frag  simplepbr.vert  tonemap.frag  utils.py
simplepbr/_ibl_funcs/: __init__.py  cpu.py
simplepbr/shaders/: shadow.frag  shadow.vert  simplepbr.frag  simplepbr.vert  skybox.frag  skybox.vert  tonemap.frag
simplepbr/textures/: brdf_lut.txo
tests/: conftest.py  test_envmap.py  test_envpool.py  test_sdr_lut.py  test_setup.py
tests/assets/hdri/: cubemap.env  cubemap_0.hdr  cubemap_1.hdr  cubemap_2.hdr  cubemap_3.hdr  cubemap_4.hdr  cubemap_5.hdr
