[build-system]
requires = [
    "setuptools >= 61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "panda3d-simplepbr"
dynamic = ["version"]
authors = [
    {name = "Mitchell Stokes"}
]
description = "A straight-forward, easy-to-use, drop-in, PBR replacement for Panda3D's builtin auto shader"
readme = "README.md"
keywords = ["panda3d", "gamedev", "pbr"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "panda3d >= 1.10.8",
    "typing_extensions ~= 4.7",
]
requires-python = ">= 3.8"

[project.urls]
homepage = "https://github.com/Moguri/panda3d-simplepbr"

[project.optional-dependencies]
test = ["pytest", "ruff"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
]

[project.scripts]
hdr2env = "simplepbr.hdr2env:main"

[tool.setuptools.dynamic]
version = {attr = "simplepbr.version.__version__"}

[tool.setuptools]
packages = ["simplepbr"]
