[metadata]
name = panda3d-simplepbr
author = Mitchell Stokes
license_file=LICENSE.txt
home-page = https://github.com/Moguri/panda3d-simplepbr
description = A simple, lightweight PBR render pipeline for Panda3D
long-description = file: README.md
long-description-content-type = text/markdown
license = BSD
license-file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include-package-data = true

[global]
verbose=0

[aliases]
test=pytest

[tool:pytest]
addopts = --pylint
