[metadata]
name = panda3d-simplepbr
version = attr: simplepbr.version.__version__
author = Mitchell Stokes
home_page = https://github.com/Moguri/panda3d-simplepbr
description = A simple, lightweight PBR render pipeline for Panda3D
long_description = file: README.md
long_description_content_type = text/markdown
keywords = panda3d, gamedev, pbr
license = BSD
license_files = LICENSE.txt
project_urls =
    Bug Tracker = https://github.com/Moguri/panda3d-simplepbr/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
setup_requires =
    panda3d >= 1.10.8
install_requires =
    panda3d >= 1.10.8
python_requires = >=3.9

[options.extras_require]
test =
    pytest
    pylint == 2.7.*
    pytest-pylint

[options.entry_points]
console_scripts =
    hdr2env = simplepbr.hdr2env:main

[global]
verbose = 0

[tool:pytest]
addopts = --pylint
